Fixed Overflow

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,6 @@ body {
   font-family: "Titillium Web", sans-serif;
   overflow-x: hidden;
   width: 100vw;
-  position: relative;
 }
 a {
   text-decoration: none;
