--- a/css/queries.css
+++ b/css/queries.css
@@ -15,7 +15,10 @@
   }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 430px) {
+  header {
+    position: relative;
+  }
   nav {
     padding: 1.7rem 2.4rem;
   }
